2004-08-09 Sureshkumar T <tsureshkumar@novell.com>
	* Tds70.cs - Prepare Method stored procedure handle read problem fixed.

2004-04-22  Sebastien Pouliot <sebastien@ximian.com> 

	* Tds70.cs: Updated to match changes in Mono.Security.dll.

2004-04-05  Lluis Sanchez Gual  <lluis@ximian.com>

	* ITds.cs: Added method for reseting a connection.
	* Tds.cs: Added base implementation for ITds.Reset.
	* Tds70.cs: Implemented ITds.Reset().
	* TdsConnectionPool.cs: Implemented connection pool that can be reused by 
	  all Tds clients.

2004-04-01  Lluis Sanchez Gual  <lluis@ximian.com>

	* Tds.cs: All methods now return DBNull instead of null for null values.
	* Tds50.cs, Tds70.cs: Support parameters with DBNull value.

2003-12-21  Tim Coleman <tim@timcoleman.com>
	* Tds70.cs:
		Fix Integrated Security to work with Domain users.

2003-12-06  Sebastien Pouliot <spouliot@videotron.ca> 
	for Daniel Morgan <danielmorgan@verizon.net>

	Sebastien Pouliot (spouliot@motus.com) helped me greatly with his
	NTLM stuff.
	
	* Mono.Data.Tds.Protocol/Tds.cs
	* Mono.Data.Tds.Protocol/Tds70.cs
	* Mono.Data.Tds.Protocol/TdsConnectionParameters.cs
	* Mono.Data.Tds.Protocol/TdsPacketSubType.cs
	* Mono.Data.Tds.Protocol/TdsPacketType.cs: added NT Authentication aka
	Integrated Security aka Domain Login
	
2003-10-19  Joerg Rosenkranz <joergr@voelcker.com>

	* Tds.cs (GetStringValue): A string length of 0xFF (255) is not
	misinterpreted as special value anymore.
	
	This is a fix to bug #49835.

2003-10-03  Diego Caravana  <diego@toth.it>

	* Tds70.cs: Now handles parameters of type ReturnValue and
	InputOutput.
	(BuildParameters): skips the ReturnValue params and builds the
	set string considering the assigned value for InputOutput ones.
	(BuildProcedureCall): like the preceding one plus adds the return
	value to the final select.
	
2003-08-22  Duncan Mak  <duncan@ximian.com>

	* Tds.cs (ProcessEndToken): RecordsAffected was not filled